fix align block

--- a/src/components/RequestFormSection/RequestFormSection.scss
+++ b/src/components/RequestFormSection/RequestFormSection.scss
@@ -7,8 +7,7 @@
 .requestForm {
   display: flex;
   flex-direction: column;
-
-  
+  margin: 0 auto;
 }
 
 .heading {
